basic-vpn.template
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Resources": {
    "vpcVpn1": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "192.168.0.0/24",
        "InstanceTenancy": "default",
        "EnableDnsSupport": "true",
        "EnableDnsHostnames": "false",
        "Tags": [
          {
            "Key": "Name",
            "Value": "vpn"
          }
        ]
      }
    },
    "subnetVpn1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "192.168.0.0/24",
        "AvailabilityZone": "<target_zone>",
        "VpcId": {
          "Ref": "vpcVpn1"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "main"
          }
        ]
      }
    },
    "igwVpn1": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "vpn-1"
          }
        ]
      }
    },
    "doptVpn1": {
      "Type": "AWS::EC2::DHCPOptions",
      "Properties": {
        "DomainName": "<target_zone_no_letter_suffix>.compute.internal",
        "DomainNameServers": [
          "AmazonProvidedDNS"
        ]
      }
    },
    "aclVpn1": {
      "Type": "AWS::EC2::NetworkAcl",
      "Properties": {
        "VpcId": {
          "Ref": "vpcVpn1"
        }
      }
    },
    "rtbVpn1": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpcVpn1"
        }
      }
    },
    "enib388368e": {
      "Type": "AWS::EC2::NetworkInterface",
      "Properties": {
        "SourceDestCheck": "true",
        "SubnetId": {
          "Ref": "subnetVpn1"
        },
        "PrivateIpAddresses": [
          {
            "PrivateIpAddress": "192.168.0.157",
            "Primary": "true"
          }
        ],
        "GroupSet": [
          {
            "Ref": "sgVpn2"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "internal"
          }
        ]
      }
    },
    "instanceVpn1": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "false",
        "InstanceInitiatedShutdownBehavior": "stop",
        "ImageId": "ami-f1d7c395",
        "InstanceType": "t2.nano",
        "KeyName": "<keypair>",
        "Monitoring": "false",
        "Tags": [
          {
            "Key": "Name",
            "Value": "VPN"
          }
        ],
        "NetworkInterfaces": [
          {
            "DeleteOnTermination": "true",
            "Description": "Primary network interface",
            "DeviceIndex": 0,
            "SubnetId": {
              "Ref": "subnetVpn1"
            },
            "PrivateIpAddresses": [
              {
                "PrivateIpAddress": "192.168.0.204",
                "Primary": "true"
              }
            ],
            "GroupSet": [
              {
                "Ref": "sgVpn1"
              }
            ]
          }
        ]
      }
    },
    "sgVpn1": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Public NIC VPN SG",
        "VpcId": {
          "Ref": "vpcVpn1"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "vpn-public"
          }
        ]
      }
    },
    "sgVpn2": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Internal NIC VPN",
        "VpcId": {
          "Ref": "vpcVpn1"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "vpn-internal"
          }
        ]
      }
    },
    "acl1": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Egress": "true",
        "Protocol": "-1",
        "RuleAction": "allow",
        "RuleNumber": "100",
        "NetworkAclId": {
          "Ref": "aclVpn1"
        }
      }
    },
    "acl2": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Protocol": "-1",
        "RuleAction": "allow",
        "RuleNumber": "100",
        "NetworkAclId": {
          "Ref": "aclVpn1"
        }
      }
    },
    "subnetacl1": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "aclVpn1"
        },
        "SubnetId": {
          "Ref": "subnetVpn1"
        }
      }
    },
    "gw1": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "vpcVpn1"
        },
        "InternetGatewayId": {
          "Ref": "igwVpn1"
        }
      }
    },
    "route1": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "RouteTableId": {
          "Ref": "rtbVpn1"
        },
        "GatewayId": {
          "Ref": "igwVpn1"
        }
      },
      "DependsOn": "gw1"
    },
    "dchpassoc1": {
      "Type": "AWS::EC2::VPCDHCPOptionsAssociation",
      "Properties": {
        "VpcId": {
          "Ref": "vpcVpn1"
        },
        "DhcpOptionsId": {
          "Ref": "doptVpn1"
        }
      }
    },
    "eniattach1": {
      "Type": "AWS::EC2::NetworkInterfaceAttachment",
      "Properties": {
        "DeleteOnTermination": "true",
        "DeviceIndex": "1",
        "NetworkInterfaceId": {
          "Ref": "enib388368e"
        },
        "InstanceId": {
          "Ref": "instanceVpn1"
        }
      }
    },
    "ingress1": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgVpn1"
        },
        "IpProtocol": "udp",
        "FromPort": "1194",
        "ToPort": "1194",
        "CidrIp": "88.98.243.233/32"
      }
    },
    "ingress2": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgVpn1"
        },
        "IpProtocol": "tcp",
        "FromPort": "22",
        "ToPort": "22",
        "CidrIp": "88.98.243.233/32"
      }
    },
    "ingress3": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgVpn2"
        },
        "IpProtocol": "-1",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "egress1": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Ref": "sgVpn1"
        },
        "IpProtocol": "-1",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "egress2": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Ref": "sgVpn2"
        },
        "IpProtocol": "-1",
        "CidrIp": "0.0.0.0/0"
      }
    }
  },
  "Description": "Basic VPN stack."
}
